fix: overflow of main page

--- a/PatteDoie/wwwroot/css/site.css
+++ b/PatteDoie/wwwroot/css/site.css
@@ -18,6 +18,5 @@ html {
 }
 
 body {
-    margin-bottom: 60px;
     background-color: #FFEBD1;
 }
